--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.7.0",
+    "react-crossfade-image": "^1.1.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.7.0",
     "react-router": "^4.3.1",
